Fixed column overflow on listing.  Fixed login css.

--- a/webui/source/css/global.css
+++ b/webui/source/css/global.css
@@ -5,6 +5,7 @@ body {
     font: 1em RaleWay, Open Sans, Helvetica, sans-serif;
     color: #ffffff;
     background: #313131;
+    overflow-x: auto;
 }
 
 h1,
